--- a/css/tipografia.css
+++ b/css/tipografia.css
@@ -5,3 +5,14 @@
 :root{
     
 }
+
+@font-face {
+      font-family: "roboto";
+      src: url(../fonts/roboto-regular.woff2) format(woff2), 
+           url(../fonts/roboto-regular.woff) format(woff);
+    }
+
+html{
+      font-family: "roboto", sans-serif;
+      font-size: 16px;
+    }
