--- a/css/header.css
+++ b/css/header.css
@@ -1,2 +1,25 @@
 /* HEADER */
 /* ***** */
+
+/* smartphone */
+header{
+    display:flex;
+    flex-direction:column;
+    align-items:center;
+}
+.banner{
+    width:100vw;
+
+
+}
+
+.logo{
+
+}
+ /* desktop */
+
+@media only screen and (min-width: 1000px) {.logo {
+    position:absolute;
+    top: 20px;
+    left: 20px;
+}}
