--- a/css/header.css
+++ b/css/header.css
@@ -3,20 +3,23 @@
 
 /* smartphone */
 header{
-    display:flex;
+    display:flex
     flex-direction:column;
     align-items:center;
 }
+
 .banner{
+/* ancho de la imagen siempre igual al ancho del dispositivo */
     width:100vw;
-
-
 }
 
 .logo{
+    text-align:center;
 
 }
- /* desktop */
+ /* Media querys */
+ /* Desktop */
+ /* logotipo */
 
 @media only screen and (min-width: 1000px) {.logo {
     position:absolute;
